etc/openshift/nginx-istio.yaml
#########################################################################
#      Copyright (C) 2020        Sebastian Francisco Colomar Bauza      #
#      SPDX-License-Identifier:  GPL-2.0-only                           #
#########################################################################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: 'true'
      labels:
        app: nginx
    spec:
      containers:
      - 
        image: secobau/nginx:latest
        name: nginx-container
        ports:
          -
            containerPort: 8080
        volumeMounts:
        - 
          mountPath: /etc/nginx/conf.d
          name: nginx-default-vol
          readOnly: true
        - 
          mountPath: /run/nginx/etc/nginx
          name: nginx-conf-vol
          readOnly: true
        -
          mountPath: /var/cache/nginx
          name: nginx-cache-vol
        -
          mountPath: /var/log/nginx
          name: nginx-logs-vol
        -
          mountPath: /var/run
          name: nginx-run-vol
      volumes:
      - 
        configMap:
          name: nginx.conf
        name: nginx-conf-vol
      - 
        name: nginx-default-vol
        secret:
          secretName: default.conf
      -
        name: nginx-cache-vol
        emptyDir: {}
      - 
        name: nginx-logs-vol
        emptyDir: {}
      -
        name: nginx-run-vol
        emptyDir: {}
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - 
      hosts:
        - "*"
      port:
        name: http
        number: 80
        protocol: HTTP
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  ports:
  - 
    port: 80
    targetPort: 8080
  selector:
    app: nginx
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - nginx-gateway
  http:
    - 
      match:
        - uri:
            exact: /index.html
      route:
        - destination:
            host: nginx-svc
            port:
              number: 80
---
